Fix avatar height on mobile to avoid squishing

--- a/style.css
+++ b/style.css
@@ -484,10 +484,13 @@ footer p {
   .profile-col {
     width: 100%;
   }
-  .avatar-placeholder,
-  .avatar-img {
+  .avatar-placeholder {
     width: 150px;
     height: 150px;
+  }
+  .avatar-img {
+    width: 180px;
+    height: auto;
   }
 
   .nav-menu {
